styles.css
body{
    margin:0;
    font-family: 'Roboto', sans-serif;
    box-sizing: border-box;
    font-weight: 600;
}

.small-text{
    font-size: small;
}

.wrapper{
    height: 100vh;
    display: grid;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: 1fr 4fr;
}

.content{
    display: grid;
    grid-row: 2/3;
    grid-column: 2/3;
    grid-template-columns: 3fr 1fr;
    background-color: rgb(225, 224, 224);
    padding: 15px 8px 30px 10px;
    gap: 10px;
    position: relative;
}

.content .title{
    margin-top: 20px;
    margin: 10px;
}

.projects-container{
    display: grid;

    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    gap: 20px;
    align-self: end;
}
header{
    display: grid;
    background-color: white;
    grid-template-rows: 40px 2fr;
    grid-template-columns: 2fr 1fr;
    grid-row: 1/2;
    grid-column: 2/3;
    padding-top: 10px;
    padding-left: 25px;
    padding-right: 50px;
    padding-bottom: 10px;
    position:relative;
    z-index: 10;
    box-shadow: 0px 4px 4px  rgba(0, 0, 0, 0.3) ;
}

.searchbar{
    display: flex;
    grid-row: 1;
    grid-column:1/2;
    justify-content: center;
    align-items: center;
    gap: 5px;
}

.user-menu{
    display: flex;
    align-items: center;
    justify-content: right;
    gap: 15px;
}

.user-menu .profile{
    max-height:60px;
}

.user-info{
    display: flex;
    gap:10px;
    margin-top: 15px;

}

.user-info img{
    height:100%;
}

.buttons{
    display: flex;
    align-items: center;
    gap: 30px;
    justify-content: right;
}

.buttons button{
    background-color: #0c4a6e;
    color: white;
    border: none;
    height: 30px;
    width: 70px;
    border-radius: 10px;

}
.sidebar{
    display:grid;
    grid-column: 1/2;
    grid-row: 1/3;
    background-color: #0c4a6e;
    color: white;
    grid-template-rows: 1fr 10fr;
    padding-right: 20px;
}

.projects{
    grid-row: 1/3;
    grid-column: 1/2;
}
.announcements{
    grid-row:  1/2;
    grid-column: 2/3;
}

.trending{
    grid-row: 2/3;
    grid-column: 2/3;
}

.card{
    width:340px;
    height: 170px;
    border:none;
    border-radius: 5px;
    background-color: white;
    box-shadow: 3px 4px 2px rgba(0, 0, 0, 0.3);
    border-left: 6px solid green;
    padding: 15px;
    position: relative;
    display:flex;
    flex-direction: column;
}

.card p{
    font-weight: 300;
    font-size: small;
}

.card-buttons{
    position: absolute;
    width: 40px;
    display: flex;
    gap: 10px;
    justify-content: flex-end;
    align-items: flex-end;
    right:10px;
    bottom: 10px;
}

.logo{
    font-size: 2rem;
    grid-row: 1/2 ;
    display: flex;
    align-items: center;
    gap: 5px;
    height: 40px;
    padding-top: 10px;
    padding-left: 10px;

}

.icon{
    height:100%;
    max-height: 1.5rem;
    width: auto;
    filter: invert(1);
}

.icon.black{
    filter: none;
}

.logo .icon{
    max-height: none;
}
ul{
    list-style: none;
    margin-top: 0;
    margin-bottom: 30px;
    margin-left: 5px;
    padding-left: 5px;

}

li{
    display: flex;
    gap: 5px;
    font-size: 1em;
    height: 50px;
    align-items: center;
    margin: 5px;
}

.search-placeholder{

    background-color: rgb(188, 182, 182);
    border-radius: 8px;
    width: 100%;
    height:25px;
}

.announcements-card, .trending-card{
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 5px;
    background-color: white;
    box-shadow: 3px 4px 2px rgba(0, 0, 0, 0.3);
    font-weight: 300;
    text-align: left;
}    

.announcements-card{
    font-size: 0.8em;
    padding: 30px 20px;
}

.announcements-card .title{
    font-size: 0.9rem;
    font-weight: 600;
    margin:0;
}

.announcements-card .divider{
    background-color: rgb(225, 224, 224);
    width: 90%;
    height: 1px;
    margin: 10px ;
}
.announcements-card p{
    margin:0;
}

.trending-card{
    display: flex;
    flex-direction: column;
    gap: 20px;
    padding: 20px 15px 10px 25px;
    height:251px;
}

.trending-card .user{
    display: flex;
    gap: 5px;
    font-size: 0.8em;
    align-self: flex-start;
    align-items: center;
}

.username{
    font-weight: 600;
}


.trending-card .small-profile{
    height: 40px;
}

.trending-card, .announcements{
    min-width: 200px;
}

